--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <header>
-    <div class="logo">
-        <p class="R"><i>R</i></p>
-        <p class="P"><i>P</i></p>
-    </div>
-    
-        <nav  class="menu">
+        <div class="logo">
+            <p class="R"><i>R</i></p>
+            <p class="P"><i>P</i></p>
+        </div>
+
+        <nav class="menu">
             <ul>
                 <li><a href="#">Главная</a></li>
                 <li><a href="#">Контент</a></li>
@@ -27,7 +27,13 @@
     </header>
 
     <div class="content">
+        <div class="recommended">
+            <h2>Рекомендуемое</h2>
+        </div>
 
+        <div class="new">
+            <h2>Новое</h2>
+        </div>
     </div>
 
     <footer>
